@@ -1,14 +1,17 @@
 package com.example.demo.service.impl;
 
+import com.example.demo.entity.Crop;
 import com.example.demo.entity.Farm;
+import com.example.demo.entity.Fertilizer;
 import com.example.demo.entity.Suggestion;
 import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.SuggestionRepository;
 import com.example.demo.service.CatalogService;
 import com.example.demo.service.FarmService;
+import com.example.demo.service.SuggestionService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.example.demo.service.SuggestionService;
+
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -29,9 +32,9 @@ public class SuggestionServiceImpl implements SuggestionService {
     public Suggestion generateSuggestion(Long farmId) {
         Farm farm = farmService.getFarmById(farmId);
         List<Crop> suitableCrops = catalogService.findSuitableCrops(farm.getSoilPH(), farm.getWaterLevel(), farm.getSeason());
-        List<String> cropNames = suitableCrops.stream().map(Crop::getName).toList();
+        List<String> cropNames = suitableCrops.stream().map(Crop::getName).collect(Collectors.toList());
         List<Fertilizer> fertilizers = catalogService.findFertilizersForCrops(cropNames);
-        List<String> fertilizerNames = fertilizers.stream().map(Fertilizer::getName).toList();
+        List<String> fertilizerNames = fertilizers.stream().map(Fertilizer::getName).collect(Collectors.toList());
 
         Suggestion suggestion = Suggestion.builder()
                 .farm(farm)
@@ -50,6 +53,6 @@ public class SuggestionServiceImpl implements SuggestionService {
 
     @Override
     public List<Suggestion> getSuggestionsByFarm(Long farmId) {
-        return suggestionRepository.findByFarmId(farmId);
+        return suggestionRepository.findByFarmIdOrderByCreatedAtDesc(farmId);
     }
 }
